# swarm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserConfig.txt  Doxyfile  Doxyfile.in  Makefile  README  README.html  README.md  README.swarm_adap  README.txt  Swarm.komodoproject  combine_cu_files.sh  custom.cmake  doc.cmake  env.sh  integrators.h  log_bdb_test.sh  master_blocksize_test.sh  swarm.cpp  swarm.cu  swarm.h  swarm.kdevelop  swarm.kdevelop.filelist  swarmlib.cpp  swarmlib.cu  test.cmake  test_integrators.cmake  test_monitors.cmake  thorough_testing.sh  variables.cmake
src/: CMakeLists.txt  README.md  ThreeVector.hpp  config.h.in  cpu_ensemble.cpp  cpu_ensemble.h  datatypes.hpp  ensemble.h  ensemble.hpp  gpu_ensemble.cpp  gpu_ensemble.cu  gpu_ensemble.h  gpu_generic_integrator.cu  gravitation.hpp  integrator.cpp  integrator.h  integrator.hpp  io.cpp  kepler.h  log.hpp  mainpage.h  plugins.cmake  random.h  static_accjerk.hpp  stopper.cu  stopwatch.h  storage.hpp  swarm.cpp  swarm.h  swarm_demo1.cpp  swarm_demo1b.cpp  swarm_demo1c.cpp  swarm_demo1g.cpp  swarm_demo2.cpp  swarm_demo3.cpp  swarm_error.h  swarm_test_energy.cpp  swarm_test_hermite_cpu.cpp  swarm_test_hermite_gpu.cpp  swarm_tutorial_compare.cpp  (+17 more)
src/astro/: BinaryStream.cpp  MemoryMap.cpp  Util.cpp  binarystream.h  constants.h  macros.h  memorymap.h  types.h  util.h
src/cux/: cuda_rng.h  cux.cpp  cux.h  cux_lowlevel.h
src/gpulog/: gpulog.h  lprintf.h
src/gpulog/bits/: gpulog_align.h  gpulog_constants.h  gpulog_debug.h  gpulog_ilogstream.h  gpulog_log.h  gpulog_logrecord.h  gpulog_macro_cleanup.h  gpulog_msg_layout.h  gpulog_printf.h  gpulog_ttraits.h  gpulog_types.h  gpulog_write.h
src/hp/: allocators.hpp  bppt.hpp  datatypes.hpp  ensemble.hpp  gravitation.hpp  helpers.hpp  hp.hpp  log.hpp
src/integrators/: CMakeLists.txt  Makefile.mk  double3.hpp  euler.cu  hermite.cu  hermite.hpp  hermite_adap.cu  hermite_adap.hpp  hermite_bpt.hpp  hermite_bpt_lean.cu  hermite_cpu.cpp  hermite_cpu.hpp  hermite_integrator.hpp  hermite_lean.cu  hermite_omp.hpp  hermite_omp_lean.cpp  irk2_cpu.hpp  irk2_integrator.hpp  midpoint.cu  mvs_cpu.hpp  mvs_omp.hpp  rkck.cu  rkck.hpp  rkck_integrator.hpp  verlet.cu
src/monitors/: combine.hpp  composites.hpp  log_rvs.hpp  log_time_interval.hpp  log_transit.hpp  mercury_mce_stat.hpp  monitor_template.hpp  stop_on_all_but_two_at_large_distance.hpp  stop_on_any_large_distance.hpp  stop_on_any_large_distance_or_close_encounter.hpp  stop_on_close_encounter.hpp  stop_on_collision.hpp  stop_on_crossing_orbit.hpp  stop_on_crossing_orbit_or_close_approach.hpp  stop_on_ejection.hpp  stop_on_ejection_or_close_approach.hpp  stopper_template.hpp  until_time_end.hpp
src/peyton/: binarystream.cpp  binarystream.hpp  fakemmap.cpp  fakemmap.h  memorymap.cpp  memorymap.hpp  util.hpp
src/plugins/: euler.cu  hermite.cu  hermite_adap.cu  hermite_bpt.cu  hermite_cpu.cpp  hermite_omp.cpp  hermite_prop.cu  irk2.cu  irk2_cpu.cpp  midpoint.cu  mvs.cu  mvs_cpu.cpp  mvs_omp.cpp  rkck.hpp  rkck_adaptive.cu  rkck_fixed.cu  verlet.cu
src/propagators/: CMakeLists.txt  Makefile.mk  euler.cu  euler.hpp  hermite.cu  hermite.hpp  hermite_propagator.cu  hermite_propagator.hpp  keplerian.hpp  midpoint.cu  midpoint.hpp  mvs.cu  mvs.hpp  verlet.cu  verlet.hpp
src/python/: CMakeLists.txt  module.cpp
src/scatter/: peaShooter.cpp
src/scatter_demo/: swarm_scatter_demo.cpp  swarm_scatter_demo.h  swarm_scatter_demo.man
src/stoppers/: stop_on_crossing_orbit_or_close_approach.hpp  stop_on_ejection.hpp  stopper_template.hpp
src/swarm/: allocators.hpp  bdb_query.cpp  bdb_query.hpp  binary_writer.cpp  bppt.hpp  common.hpp  config.hpp  ensemble.hpp  ensemble_alloc.hpp  generic_gpu_bppt_integrator.hpp  gravitation.hpp  helpers.hpp  integrator.cpp  integrator.hpp  io.cpp  io.hpp  kepler.h  log.cpp  log.hpp  logmanager.cpp  logmanager.hpp  mainpage.h  meta.hpp  null_writer.cpp  plugin.cpp  plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  plugins.cpp  plugins.hpp  query.cpp  query.hpp  runtime_error.hpp  snapshot.cpp  snapshot.hpp  static_accjerk.hpp  stopwatch.h  storage.hpp  swarm.cpp  swarm.h  (+9 more)
src/swarm/gpu/: bppt.hpp  device_settings.cpp  device_settings.hpp  generic_gpu_bppt_integrator.hpp  gravitation.hpp  gravitation_acc.hpp  gravitation_accjerk.hpp  gravitation_common.hpp  gravitation_gr_acc.hpp  gravitation_largen.hpp  gravitation_mediumn.hpp  helpers.cpp  helpers.hpp  pair_calculation.hpp  utilities.cu  utilities.hpp
src/swarm/log/: bdb_database.cpp  bdb_database.hpp  bdb_writer.cpp  binary_writer.cpp  fileformat.hpp  host_array_writer.cpp  host_array_writer.hpp  io.cpp  io.hpp  log.cpp  log.hpp  logmanager.cpp  logmanager.hpp  null_writer.cpp  types.hpp  writer.cpp  writer.h
src/swarm/peyton/: astro_types.hpp  binarystream.cpp  binarystream.hpp  constants.hpp  fakemmap.cpp  fakemmap.h  macros.h  memorymap.cpp  memorymap.hpp  (+3 more)
src/swarm_adap/: swarm_adap.cpp  swarm_adap.h
src/tutorials/: CMakeLists.txt  Makefile.mk  kepler.cpp  kepler.h  kepler.hpp  montecarlo.cpp  montecarlo_ecclimit.cpp  montecarlo_mcmc_outputs.cpp  random.h  random.hpp  simple.cpp  swarm_benchmark.cpp  swarm_stability_test.cpp  swarm_tutorial_benchmark.cpp  swarm_tutorial_compare.cpp  swarm_tutorial_cpu.cpp  swarm_tutorial_gpu.cpp  swarm_tutorial_montecarlo.cpp  swarm_tutorial_montecarlo_kepler.cpp  swarm_tutorial_montecarlo_rv.cpp  swarm_tutorial_simple.cpp  tutorial_ensemble.cpp  tutorial_gpu.cpp  tutorial_integrator.hpp  tutorial_integrator_plugin.cu  tutorial_monitor.hpp  tutorial_monitor_plugin.cu  tutorial_propagator.cu  tutorial_propagator.hpp  tutorial_propagator_plugin.cu  tutorial_simple.cpp  utils.cpp  utils.hpp
src/utils/: CMakeLists.txt  Makefile.mk  README.md  binary_reader.cpp  binary_reader.hpp  log2db.cpp  parabolic_collision.cpp  snapshot2text.cpp  stability_test.cpp  stability_test_gpu.cpp  straight_line.cpp  swarm.cpp  swarm_benchmark.cpp  swarm_benchmark_gpu.cpp  swarmquery.cpp  swarmquerykeplerian.cpp  test_energy.cpp  text2snapshot.cpp  unit_tests.cpp  utils.cpp  utils.hpp  verify_integrator.cpp
(+389 files in other folders)
